k8s/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meshcloud-headless
  labels:
    app: meshcloud
spec:
  clusterIP: None
  selector:
    app: meshcloud
  ports:
    - name: http
      port: 8000
      targetPort: 8000
    - name: discovery
      port: 9999
      targetPort: 9999
